# ansible-pull

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml
defaults/: main.yml
files/: sudoers_ansible
meta/: main.yml
molecule/default/: molecule.yml
molecule/default/tests/: test_add_deploy_key.py  test_create_user.py  test_install_venv.py  test_system_packages.py  test_timer_systemd.py  test_vaults.py
molecule/no-create-user/: molecule.yml
molecule/no-create-user/tests/: test_default.py
molecule/resources/docker/: unprivileged.Dockerfile.j2
molecule/resources/files/: test_inventory.yml.j2  test_playbook_encrypted.yml  test_playbook_unencrypted.yml
molecule/resources/inventories/: default.yml  no-create-user.yml
molecule/resources/playbooks/: converge-unprivileged.yml  converge.yml  prepare-existing-user.yml  prepare.yml
molecule/unprivileged/: molecule.yml
molecule/unprivileged/tests/: test_default.py
tasks/: add_deploy_key.yml  create_ssh_key.yml  create_user.yml  install_venv.yml  logging.yml  main.yml  preflight_checks.yml  system_packages.yml  timer_cron.yml  timer_systemd.yml  vaults.yml
templates/: do_pull.j2  logrotate_ansible_pull.j2  sudoers_ansible.j2  systemd_service.j2  systemd_timer.j2
vars/: main.yml
